syntax = "proto3";

package automatedcodingworkflow;

service AutomatedCodingWorkflowService {
    rpc StartWorkflow (StartWorkflowRequest) returns (StartWorkflowResponse);
    rpc GetWorkflowConfig (GetWorkflowConfigRequest) returns (GetWorkflowConfigResponse);
    rpc SetWorkspacePath (SetWorkspacePathRequest) returns (SetWorkspacePathResponse);
}

message StartWorkflowRequest {
}

message StartWorkflowResponse {
    string result = 1;
}

message GetWorkflowConfigRequest {
}

message GetWorkflowConfigResponse {
    repeated Stage stages = 1;
}

message Stage {
    string stage_name = 1;
    string stage_class = 2;
    repeated Stage stages = 3;
}


message SetWorkspacePathRequest {
    string workspace_path = 1;
}
  
message SetWorkspacePathResponse {
    bool success = 1;
    string error_message = 2;
}